# neuro_package

./: .gitignore  README.md
neuro_arm/: .setup_assistant  CMakeLists.txt  package.xml
neuro_arm/config/: arm_cfg.yaml  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  neurobot.srdf  ompl_planning.yaml  sensors.yaml  sensors_depth.yaml  sensors_pointcloud.yaml
neuro_arm/launch/: default_warehouse_db.launch  demo.launch  fake_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  neuro_arm.launch  neuro_arm_controller.launch.xml  neuro_controller_manager.launch.xml  neuro_init.launch  neuro_moveit_sensor_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rosserial.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
neuro_arm/scripts/: neurobot_arm_left.py  neurobot_fk_nihao.py  neurobot_fk_zaijian.py
neuro_bridge/: CMakeLists.txt  package.xml
neuro_bridge/left_hand_servo/: left_hand_servo.ino
neuro_bridge/src/: both_arm (copy).cpp  both_arm.cpp  left_arm (copy).cpp  left_arm.cpp  left_arm0801before.cpp  left_arm1.cpp  left_arm_vel.cpp  left_gripper_trajectory_pub.cpp  right_arm_trajectory_pub.cpp
neuro_model/: manifest.xml
neuro_model/launch/: display.launch  gazebo.launch  neuro_model.launch
neuro_model/meshes/: base_leg.stl  base_link.stl  (+7 more)
neurofull/: manifest.xml  urdf.rviz
neurofull_moveit_config/: .setup_assistant  CMakeLists.txt  Untitled Document  package.xml
(+58 files in other folders)
